patch work and new Route added for admin
